force-app/main/default/objects/Star_rating_attributes__mdt/Star_rating_attributes__mdt.object-meta.xml
<CustomObject>
    <label>Star rating attributes</label>
    <pluralLabel>Star rating attributes</pluralLabel>
</CustomObject>