force-app/main/default/objects/Star_rating_attributes__mdt/fields/Lock_api_field_name__c.field-meta.xml
<CustomField>
    <fullName>Lock_api_field_name__c</fullName>
    <description>Field that if false locks rating</description>
    <inlineHelpText>Field that if false locks rating</inlineHelpText>
    <label>Lock api field name</label>
    <length>180</length>
    <type>Text</type>
</CustomField>