force-app/main/default/objects/Star_rating_attributes__mdt/fields/Rating_api_field_name__c.field-meta.xml
<CustomField>
    <fullName>Rating_api_field_name__c</fullName>
    <label>Rating api field name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>