force-app/main/default/objects/Star_rating_attributes__mdt/fields/Record_id_api_field_name__c.field-meta.xml
<CustomField>
    <fullName>Record_id_api_field_name__c</fullName>
    <label>Record id api field name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>