force-app/main/default/objects/Star_rating_attributes__mdt/fields/Record_id_column_field_name__c.field-meta.xml
<CustomField>
    <fullName>Record_id_column_field_name__c</fullName>
    <label>Record id column field name</label>
    <length>250</length>
    <required>true</required>
    <type>Text</type>
</CustomField>